<resources>
    <string name="app_name">BikerApp!</string>

    <!--Welcome fragment -->
    <string name="fragment_welcome_button_rss_label">See the news</string>
    <string name="fragment_welcome_button_maps_label">See the best riding spots!</string>
    <string name="fragment_welcome_info">Welcome to the Biker app! See what\'s new in the bike world or see where to ride next!</string>

    <!-- News Source fragment-->
    <string name="fragment_news_source_button_pb">See what\'s new on Pinkbike</string>
    <string name="fragment_news_source_button_vt">See what\'s new on VitalMtb</string>
    <string name="fragment_news_source_error_connection">You need to be connected to the internet to view the news!</string>

    <!-- Park Map fragment-->
    <string name="fragment_park_map_title">List of riding spots. Click on one to show on the map!</string>
    <string name="fragment_park_map_info_permission_denied_explanation">You need to grant location permission in order to add the riding spot.</string>

    <!-- Add Riding Spot fragment-->
    <string name="fragment_add_riding_spot_button_save_text">Save the spot</string>
    <string name="fragment_add_riding_spot_title_hint">Name of the riding spot</string>
    <string name="fragment_add_riding_spot_location_hint">Where is this riding spot?</string>
    <string name="fragment_add_riding_spot_description_hint">Describe the spot in short</string>
    <string name="fragment_add_riding_spot_error_invalid_input">You must have at least maps location and title to save riding spot</string>

    <!-- Generic strings-->
    <string name="settings">Settings</string>

</resources>